# veritas

./: .gitignore  AMD RDNA2 instruction set.md  AMD processor counts.md  CONSTITUTION.md  Cargo.toml  README.md  build.rs
benches/: operator_comprehensive.rs
docs/: BENCHMARK_RESULTS.md  BOLT_ON_ARCHITECTURE.md  FINDINGS.md  GPU_BENCHMARKS.md  GPU_UNDEFINED_HANDLING.md  METRICS.md  NEURAL_STACK.md  PLAN.md  README.md  SQRT_BITWISE_WINNER.md  SQRT_LUT_OPTIMIZATION.md  TESTING_SUMMARY.md  cuda_vs_rocm.md  gpu_benchmark_results.md  gpu_implementation_status.md  gpu_performance_analysis.md  gpu_strategy.md  idea_representation.md
examples/: autograd_gpu_benchmark.rs  autograd_test.rs  basecalc_no_markers.rs  basecalc_routing.rs  binary_addition_3bit.rs  binary_addition_feedforward.rs  binary_addition_trained.rs  check_spirix_values.rs  checkpoint_test.rs  cpu_training_test.rs  dozenal_addition_training.rs  dozenal_rnn_bptt.rs  dozenal_rnn_pid.rs  full_training_spirix.rs  gpu_circle_correctness_vs_performance.rs  gpu_circle_f4e5_vs_ieee.rs  gpu_circle_optimized_showdown.rs  gpu_circle_vs_ieee_complex.rs  gpu_denormal_torture.rs  gpu_final_showdown.rs  gpu_five_ops_battle.rs  gpu_hip_denormal_battle.rs  gpu_in_place_ops_bench.rs  gpu_isolated_ops_bench.rs  gpu_matmul_benchmark.rs  gpu_matmul_benchmark_opencl.rs  gpu_real_denormals.rs  gpu_spirix_vs_ieee.rs  gpu_tiled_showdown.rs  gpu_training_realistic.rs  integrated_routing_math.rs  iteration_demo.rs  math_repl.rs  octal_addition_training.rs  phase1_identity_gate.rs  phase1_simple_identity.rs  phase2_logic_gates.rs  phase3_arithmetic_bolton.rs  phase3_arithmetic_working.rs  phase4_bitwise_dozenal.rs  (+15 more)
gpu/: INSTALL_FEDORA.md  README.md  setup_and_test.sh
gpu/hip/: build.sh  build_asm.sh  build_denormal_test.sh  circle_f4e5_matmul.hip  circle_f4e5_tiled_packed.hip  circle_matmul.hip  ieee_complex_denormal_preserve.hip  ieee_complex_matmul.hip  ieee_matmul_denormal.hip  ieee_matmul_tiled.hip  ieee_ops_all.hip  in_place_ops.hip  isolated_ops.hip  spirix_matmul.hip  spirix_matmul_asm.hip  spirix_matmul_tiled.hip  spirix_ops_all.hip  test_rdna2_isa.hip
gpu/opencl/: build_and_test.sh  spirix_matmul.cl
src/: error.rs  lib.rs  main.rs
src/autograd/: backward.rs  gpu.rs  graph.rs  mod.rs  nn.rs  ops.rs  optimizer.rs  tensor.rs
src/compositor/: mod.rs  response.rs  serializer.rs  thought.rs
src/encoding/: compression.rs  intent.rs  mod.rs  (+2 more)
tests/: debug_gpu_matmul.rs  gpu_matmul_verification.rs  gpu_undefined_correctness.rs  spirix_constants_match.rs  tensor_edge_cases.rs  tensor_properties.rs
(+47 files in other folders)
